--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -37,7 +37,7 @@ and open the template in the editor.
         <form method="POST" action="AuthorController">
             
             <input type="submit" name="submit" value="Veiw All Authors"/>     
-        
+            <input type="hidden" name="action" value="getList" />
         </form>
         </div>
         </div>
