Back on JPA non Spring. Fixed a whole bunch of stuff Author Controller wise. Trying to set the whole thing up more like Jims. However... Edits to the Book Controller are causing Unsatisfied dependencies for type AbstractFacade with qualifiers @Default   at injection point   I believe this is the bean.xml file issue. about to delete that file and try again.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -40,6 +40,12 @@ and open the template in the editor.
             <input type="submit" name="submit" value="Veiw All Authors"/>     
             <input type="hidden" name="action" value="getList" />
         </form>
+         <form method="POST" action="BookController">
+            
+            <input type="submit" name="submit" value="Veiw All Authors"/>     
+            <input type="hidden" name="action" value="getList" />
+        </form>    
+            
         </div>
         </div>
          </div>
