--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -40,9 +40,11 @@ and open the template in the editor.
             <input type="submit" name="submit" value="Veiw All Authors"/>     
             <input type="hidden" name="action" value="getList" />
         </form>
+            <br>
+            <br>
          <form method="POST" action="BookController">
             
-            <input type="submit" name="submit" value="Veiw All Authors"/>     
+            <input type="submit" name="submit" value="Veiw All Books"/>     
             <input type="hidden" name="action" value="getList" />
         </form>    
             
