--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -42,7 +42,7 @@ and open the template in the editor.
         </form>
             <br>
             <br>
-         <form method="POST" action="BookController">
+         <form method="POST" action="BookController2">
             
             <input type="submit" name="submit" value="Veiw All Books"/>     
             <input type="hidden" name="action" value="getList" />
